--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -3,6 +3,6 @@
         "message": "WhatsApp"
     },
     "description": {
-        "message": "Use WhatsApp in your browser."
+        "message": "Unofficial WhatsApp™ client for Google Chrome."
     }
 }
