--- a/app/_locales/ru/messages.json
+++ b/app/_locales/ru/messages.json
@@ -3,6 +3,6 @@
         "message": "WhatsApp"
     },
     "description": {
-        "message": "Используйте WhatsApp в вашем браузере."
+        "message": "Неофициальный клиент WhatsApp™ для Google Chrome."
     }
 }
