--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1,6 +1,6 @@
 {
     "name": {
-        "message": "WhatsApp"
+        "message": "WhatsWeb"
     },
     "description": {
         "message": "Unofficial WhatsApp™ client for Google Chrome."
