--- a/app/_locales/ru/messages.json
+++ b/app/_locales/ru/messages.json
@@ -1,6 +1,6 @@
 {
     "name": {
-        "message": "WhatsApp"
+        "message": "WhatsWeb"
     },
     "description": {
         "message": "Неофициальный клиент WhatsApp™ для Google Chrome."
