First OK Messages commit

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1,8 +1,8 @@
 {
     "name": {
-        "message": "WhatsWeb"
+        "message": "OK Messages"
     },
     "description": {
-        "message": "Unofficial WhatsApp™ client for Google Chrome."
+        "message": "OK Messages client for Google Chrome."
     }
 }
