--- a/app/_locales/ru/messages.json
+++ b/app/_locales/ru/messages.json
@@ -1,8 +1,8 @@
 {
     "name": {
-        "message": "WhatsWeb"
+        "message": "ОК Сообщения"
     },
     "description": {
-        "message": "Неофициальный клиент WhatsApp™ для Google Chrome."
+        "message": "Клиент ОК Сообщения для Google Chrome."
     }
 }
